# libtorch-cpp

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
lib/: libomp.dylib
lib/libtorch/: build-hash  build-version
lib/libtorch/include/ATen/: CPUFunctions_inl.h  CUDAFunctions_inl.h  Functions.h  MPSFunctions_inl.h  NativeFunctions.h  NativeMetaFunctions.h  Operators.h  RedispatchFunctions.h  RegistrationDeclarations.h  VmapGeneratedPlumbing.h
lib/libtorch/include/ATen/core/: aten_interned_strings.h
lib/libtorch/lib/: libc10.dylib  libpytorch_jni.dylib  libtorch_cpu.dylib
mnist_data/: get-data.py
